--- a/FtcRobotController/src/main/AndroidManifest.xml
+++ b/FtcRobotController/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
       android:screenOrientation="fullUser"
       android:configChanges="orientation|screenSize"
       android:label="@string/app_name"
+      android:exported="true"
       android:launchMode="singleTask" >
 
       <intent-filter>
